# Model-Ingestion-Gateway

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
policies/: model-ingestion.yaml  promotion.rego
src/mig/: __init__.py  py.typed
src/mig/audit/: __init__.py  logger.py
src/mig/cli/: __init__.py  banner.py  main.py
src/mig/core/: __init__.py  artifact.py  context.py  hashing.py  pipeline.py  protocols.py  registry.py  serde.py  verdict.py
src/mig/evidence/: __init__.py  attestation.py  builder.py  bundle.py  canonical.py  dsse.py  signing.py  statement.py  verify.py
src/mig/evidence/signers/: __init__.py  cosign.py  ed25519.py
src/mig/gates/: __init__.py  _common.py  _safetensors.py  behavioral.py  digest.py  format_allowlist.py  license_metadata.py  prompt_injection.py  secrets.py  serialization_safety.py  skill.py  static_code.py
src/mig/policy/: __init__.py  engine.py  loader.py  schema.py
src/mig/promotion/: __init__.py  audit.py  errors.py  gate.py  input_doc.py  promote.py  receipt.py
src/mig/promotion/opa/: __init__.py  cli.py
src/mig/promotion/stores/: __init__.py  local_fs.py
src/mig/sandbox/: __init__.py  _harness.py  base.py  docker.py  noop.py  spec.py
src/mig/sources/: __init__.py  base.py  huggingface.py  local.py
src/mig/storage/: __init__.py  quarantine.py
tests/: conftest.py  test_cli.py  test_cli_banner.py  test_cli_evidence.py  test_cli_scan.py  test_contracts.py  test_cosign_signer.py  test_docker_sandbox.py  test_evidence.py  test_evidence_review_fixes.py  test_gates.py  test_hashing.py  test_huggingface_source.py  test_invariants.py  test_local_source.py  test_noop_sandbox.py  test_pipeline.py  test_pipeline_runner.py  test_policy.py  test_policy_engine.py  test_promotion.py  test_quarantine.py  test_registry.py  test_safetensors_header.py  test_serde.py  test_skill_gate.py  test_static_scanners.py  test_verdict.py
tests/fixtures/sample-model/: config.json  model.safetensors
