[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "mig"
description = "Model Ingestion Gateway — vet AI artifacts before they enter trusted infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "MIG authors" }]
keywords = [
    "security",
    "supply-chain",
    "ml",
    "ai",
    "model-scanning",
    "attestation",
    "sbom",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Typing :: Typed",
]
# The core is intentionally stdlib-only (invariant I10: minimal, audited deps).
# Integrations arrive as extras in their respective PRs — mig[huggingface] (PR3),
# mig[scanners] (PR4), mig[opa] / mig[s3] / mig[harbor] (PR8+). The PR6 behavioral
# sandbox needs no Python dep — it drives the host `docker` CLI via subprocess.
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
# Opt-in integrations — the core stays stdlib-only (I10). Each extra is added in
# the PR that wires it and is locked + hash-pinned in uv.lock.
huggingface = ["huggingface-hub>=0.26,<1"]
scanners = ["picklescan>=0.0.21,<2"]
policy = ["pyyaml>=6,<7"]
# PR7 signing: ed25519 asymmetric attestation signatures (publicly verifiable,
# promotion-grade). The default HMAC signer is stdlib-only and needs none of this.
signing = ["cryptography>=43,<46"]
# PR7 cosign: a marker extra — the cosign signer drives the host `cosign` binary
# via subprocess and needs NO Python dependency (like the PR6 docker sandbox).
cosign = []

[project.urls]
Homepage = "https://github.com/acidoom/mig"
Repository = "https://github.com/acidoom/mig"

[project.scripts]
mig = "mig.cli.main:main"

# Built-in gates are also exposed as entry-points so an installed extra (or a
# third party) can be discovered through the plugin registry, not just the
# hard-wired default_gates() list.
[project.entry-points."mig.gates"]
format_allowlist = "mig.gates.format_allowlist:FormatAllowlistGate"
digest = "mig.gates.digest:DigestGate"
serialization_safety = "mig.gates.serialization_safety:SerializationSafetyGate"
secrets = "mig.gates.secrets:SecretsGate"
license_metadata = "mig.gates.license_metadata:LicenseMetadataGate"
static_code = "mig.gates.static_code:StaticCodeGate"
prompt_injection = "mig.gates.prompt_injection:PromptInjectionGate"
behavioral = "mig.gates.behavioral:BehavioralGate"

[dependency-groups]
dev = [
    "pytest>=8.3,<9",
    "mypy>=1.13,<2",
    "ruff>=0.8,<1",
    # Scanners MIG wraps are installed in dev so the test suite exercises real
    # detection against the known-bad fixture corpus (PR4 acceptance).
    "picklescan>=0.0.21,<2",
    # PyYAML in dev so policy tests load real YAML (PR5).
    "pyyaml>=6,<7",
    # cryptography in dev so the suite exercises the real ed25519 path (PR7).
    "cryptography>=43,<46",
]

[tool.hatch.version]
path = "src/mig/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mig"]

[tool.hatch.build.targets.sdist]
# Ship uv.lock so the audited, hash-pinned dev environment is reproducible from
# the sdist alone (I10), and NOTICE per Apache-2.0 §4(d).
include = [
    "src/mig",
    "tests",
    "policies",
    "README.md",
    "LICENSE",
    "NOTICE",
    "pyproject.toml",
    "uv.lock",
]

[tool.ruff]
line-length = 90
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "TID", # tidy imports
    "S",   # flake8-bandit — fast first line for I1/I10 (pickle, exec, subprocess…)
]
# I1/I10 guardrail: bandit (S) flags suspicious imports / dynamic execution as
# the fast first line; tests/test_invariants.py is the hard, structural gate.

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use asserts (S101), hardcoded /tmp fixture paths (S108),
# build a malicious pickle fixture on purpose (S301/S403), and drive Docker /
# the harness via subprocess (S404/S603/S607).
"tests/*" = ["B011", "S101", "S108", "S301", "S403", "S404", "S603", "S607"]
# The DockerSandbox driver intentionally shells out to `docker` (S404/S603/S607);
# argv is MIG-controlled and never shell-interpreted. The "/tmp" strings are
# in-container tmpfs mounts, not host temp files (S108).
"src/mig/sandbox/docker.py" = ["S404", "S603", "S607", "S108"]
# The in-CONTAINER detonation harness intentionally deserializes (S403/S301) —
# it runs confined, never in the host process (see I1 exemption).
"src/mig/sandbox/_harness.py" = ["S403", "S301"]
# The cosign signer intentionally shells out to the `cosign` CLI (S404/S603/S607);
# argv is MIG-controlled and never shell-interpreted (mirrors docker.py).
"src/mig/evidence/signers/cosign.py" = ["S404", "S603", "S607"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
mypy_path = ["src", "tests"]
explicit_package_bases = true
namespace_packages = true
warn_unreachable = true
pretty = true

# Wrapped third-party scanners ship no type stubs; they are accessed only through
# narrow wrappers, so treat them as untyped rather than failing strict mode.
[[tool.mypy.overrides]]
module = [
    "huggingface_hub",
    "huggingface_hub.*",
    "picklescan",
    "picklescan.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
# Import mig straight from src so the test run does not depend on the editable
# install (which iCloud Drive can evict from under .venv). CI is unaffected.
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = ["error"]
